<resources>
    <string name="app_name">App Compras</string>
    <string name="appTitulo">Escolha o seu produto:</string>
    <string name="appTitulo2">Total da Compra:</string>
    <string name="textResultado">Resultado</string>
    <string name="btnCalcular">Calcular</string>
    <string name="cbArroz">Arroz (R$2,69)</string>
    <string name="cbLeite">Leite (R$5,00)</string>
    <string name="cbCarne">Carne (R$10,00)</string>
    <string name="cbFeijao">Feijão (R$2,30)</string>
    <string name="cbCoca">CocaCola 2L (R$2,00)</string>
</resources>