<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#006341 "
        android:text="@string/appTitulo" />

    <CheckBox
        android:id="@+id/cbArroz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/cbArroz" />

    <CheckBox
        android:id="@+id/cbLeite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/cbLeite" />

    <CheckBox
        android:id="@+id/cbCarne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/cbCarne" />

    <CheckBox
        android:id="@+id/cbFeijao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/cbFeijao" />

    <CheckBox
        android:id="@+id/cbCoca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/cbCoca"/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00A859"
        android:fontFamily="monospace"
        android:text="@string/btnCalcular"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#006341 "
        android:text="@string/appTitulo2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/textResultado" />

</LinearLayout>